# python-template

./: Makefile  README.md  pyproject.toml  setup.sh
src/python-template/: cli.py
src/python_template/: base.py  cli.py
