[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "python_template"
version = "0.0.1"
authors = [
  { name="Example Author", email="author@example.com" },
]
description = "Python template repository"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: UNLICENSED",
  "Operating System :: OS Independent",
]

dependencies = []

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
python-template = "python_template.cli:main"